--- a/src/styles/contactDetails.css
+++ b/src/styles/contactDetails.css
@@ -4,7 +4,7 @@
   align-items: center;
   background-color: #a86f9d;
   width: 100%;
-  border: 1px solid;
+  border: 0px solid;
   color: white;
 }
 
@@ -18,9 +18,9 @@
 }
 
 /* For PC  */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 850px) {
   .linkContainer {
     align-items: center;
-    padding: 0% 2% 1% 0%;
+    /* padding: 0% 2% 1% 0%; */
   }
 }
