--- a/src/styles/homepage.css
+++ b/src/styles/homepage.css
@@ -41,5 +41,5 @@
 }
 
 /* For PC  */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 850px) {
 }
