--- a/src/styles/projectPage.css
+++ b/src/styles/projectPage.css
@@ -12,6 +12,7 @@
   width: 90%;
   border-radius: 5%;
   color: white;
+  margin: 1% 0% 1% 0%;
 }
 
 .projectListBox ul {
@@ -38,7 +39,7 @@
 }
 
 /* For PC  */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 850px) {
   .projectListContainer {
     align-items: center;
     display: flex;
@@ -51,7 +52,7 @@
     border: 1px solid;
     flex-direction: column;
     width: 80%;
-    justify-content: left;
+    /* justify-content: left; */
     margin: 2%;
     padding: 0% 3% 0% 3%;
     border-radius: 5%;
@@ -63,6 +64,8 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: left;
+    /* width: 60%; */
   }
 
   .projectListBox ul li .navLink .box {
@@ -81,7 +84,7 @@
   }
 
   .navLink button {
-    font-size: large;
+    font-size: small;
     text-decoration: none;
   }
 }
