--- a/src/styles/singleProjectPage.css
+++ b/src/styles/singleProjectPage.css
@@ -46,7 +46,7 @@
 }
 
 /* For PC  */
-@media only screen and (min-width: 600px) {
+@media only screen and (min-width: 850px) {
   .projectCardContainer {
   }
 
